--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,700,700i&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
@@ -18,15 +24,12 @@
   </head>
 
   <body>
-
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
-    <main class="container">
-    </main>
-
+    <main class="container"></main>
   </body>
 </html>
