--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,21 @@
   </head>
 
   <body>
-    <!-- Top nav bar (fixed) -->
-    <nav>
+  <!-- Top nav bar (fixed) -->
+  <nav>
       <span>tweeter</span>
+      <p><strong>Write</strong> a new tweet</p>
     </nav>
+    <!-- Header -->
+    <header>
+        <div>
+          <img src="/images/profile-hex.png" />
+        </div>
+        <br />
+        <div>
+          <h2>Your Name</h2>
+        </div>
+      </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
