--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,15 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
+    <!-- Nav CSS -->
+    <link rel="stylesheet" href="/styles/nav.css" />
+
+    <!-- Header CSS -->
+    <link rel="stylesheet" href="/styles/header.css" />
+
+    <!-- New Tweet CSS -->
+    <link rel="stylesheet" href="/styles/new-tweet.css" />
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -24,23 +33,37 @@
   </head>
 
   <body>
-  <!-- Top nav bar (fixed) -->
-  <nav>
+    <!-- Top nav bar (fixed) -->
+    <nav>
       <span>tweeter</span>
       <p><strong>Write</strong> a new tweet</p>
     </nav>
+
     <!-- Header -->
     <header>
-        <div>
-          <img src="/images/profile-hex.png" />
-        </div>
-        <br />
-        <div>
-          <h2>Your Name</h2>
-        </div>
-      </header>
+      <div>
+        <img src="/images/profile-hex.png" />
+      </div>
+      <br />
+      <div>
+        <h2>Your Name</h2>
+      </div>
+    </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <section class="new-tweet">
+        <form id="form" action="/tweets/" method="POST">
+          <textarea
+            name="text"
+            placeholder="What are you humming about?"
+          ></textarea>
+          <footer>
+            <input type="submit" value="Tweet" />
+            <span class="counter">140</span>
+          </footer>
+        </form>
+      </section>
+    </main>
   </body>
 </html>
