--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+
+    <!-- composer-char-counter.js -->
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -53,14 +56,15 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <form id="form" action="/tweets/" method="POST">
+        <form  action="/tweets/" method="POST">
           <textarea
+          id="txt"
             name="text"
             placeholder="What are you humming about?"
           ></textarea>
           <footer>
-            <input type="submit" value="Tweet" />
-            <span class="counter">140</span>
+            <input  type="submit" value="Tweet" />
+            <span id="counter"></span>
           </footer>
         </form>
       </section>
