cards implemented with css effects working

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
     <!-- New Tweet CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" />
 
+    <!-- Tweets Display CSS -->
+    <link rel="stylesheet" href="/styles/tweetsDisplay.css" />
+
+    <!-- Font Awesome CSS -->
+    <script src="https://kit.fontawesome.com/c7eb4a8d60.js"></script>
+
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -43,7 +50,7 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header class="topHeader">
       <div>
         <img src="/images/profile-hex.png" />
       </div>
@@ -68,6 +75,52 @@
           </footer>
         </form>
       </section>
+      <section id="tweetsDisplay" >
+          <article class="tweets">
+            <header>
+              <div class="headerWrapper">
+                <img class="profileImg" src="images/emoji_3.png" alt="profile image">
+                <span>Elmer Lazzerini</span>
+              </div>
+              <span class="userEmail">@Lazzerini</span>
+            </header>
+            <section>
+              <span>If I have further it is by standing on the shourlder of giants</span>
+              <hr>
+            </section>
+            <footer>
+              <span>10 days ago</span>
+              <div class="iconsWrapper">
+                  <i class="fas fa-flag"></i>
+                  <i class="fas fa-retweet"></i>
+                  <i class="fas fa-heart"></i>
+              </div>
+            </footer>
+          </article>
+      </section >
+      <section id="tweetsDisplay" >
+          <article class="tweets">
+            <header>
+              <div class="headerWrapper">
+                <img class="profileImg" src="images/emoji_3.png" alt="profile image">
+                <span >Elmer Lazzerini</span>
+              </div>
+              <span class="userEmail" >@Lazzerini</span>
+            </header>
+            <section>
+              <span>If I have further it is by standing on the shourlder of giants</span>
+              <hr>
+            </section>
+            <footer>
+              <span>10 days ago</span>
+              <div class="iconsWrapper">
+                  <i class="fas fa-flag"></i>
+                  <i class="fas fa-retweet"></i>
+                  <i class="fas fa-heart"></i>
+              </div>
+            </footer>
+          </article>
+      </section >
     </main>
   </body>
 </html>
