form validation added

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@
           ></textarea>
           <footer>
             <input  type="submit" value="Tweet" />
+            <span id="errMessage"></span>
             <span id="counter"></span>
           </footer>
         </form>
