bouncing effect implemented

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,11 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
-      <p><strong>Write</strong> a new tweet</p>
+      <div class="wrapper">
+        <p><strong>Write</strong> a new tweet</p>
+        <i  class="fas fa-angle-double-down"></i>
+      </div>
+     
     </nav>
 
     <!-- Header -->
