Responsive design working

--- a/public/copyIndex.html
+++ b/public/copyIndex.html
@@ -53,16 +53,18 @@
         <p><strong>Write</strong> a new tweet</p>
         <i  class="fas fa-angle-double-down"></i>
       </div>
+     
     </nav>
-
-    <div class="bodyWrapper">
+    <div class="bodWrapper">
     <!-- Header -->
     <header class="topHeader">
-       <div>
+      <div>
         <img src="/images/profile-hex.png" />
-        <br />
-          <h2>Edgar  </h2>
-       </div>
+      </div>
+      <br />
+      <div>
+        <h2>Your Name</h2>
+      </div>
     </header>
 
     <!-- Page-specific (main) content here -->
