--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+      <span id="logo">tweeter</span>
       <div class="wrapper">
         <p><strong>Write</strong> a new tweet</p>
         <i  class="fas fa-angle-double-down"></i>
