application user image changable with tweet user

--- a/public/index.html
+++ b/public/index.html
@@ -59,9 +59,9 @@
     <!-- Header -->
     <header class="topHeader">
        <div>
-        <img src="/images/profile-hex.png" />
+        <img id="avatar" src="/images/profile-hex.png" />
         <br />
-          <h2>Edgar  </h2>
+          <h2 id="userName">  </h2>
        </div>
     </header>
 
