--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
             placeholder="What are you humming about?"
           ></textarea>
           <footer>
-            <input  type="submit" value="Tweet" />
+            <input id="btnSubmit"  type="submit" value="Tweet" />
             <span id="errMessage"></span>
             <span id="counter"></span>
           </footer>
